# TinTorrent

./: .gitignore
TinTorrent/: CMakeLists.txt  Doxyfile  build.sh  config.json  main.cpp
TinTorrent/Assertions/: Assertions.cpp  Assertions.h
TinTorrent/Common/: Buffer.cpp  Buffer.h  ConfigLoader.cpp  ConfigLoader.h  Constants.cpp  Constants.h  ExHelp.cpp  ExHelp.h  InMemoryBuffer.cpp  InMemoryBuffer.h  MultithreadingVector.cpp  MultithreadingVector.h  SegmentRange.cpp  SegmentRange.h  SegmentsSet.cpp  SegmentsSet.h  StringHelp.cpp  StringHelp.h  Typedefs.h
TinTorrent/Common/Exceptions/: MissingRequiredFile.cpp  MissingRequiredFile.h
TinTorrent/FileManager/: FileInformationConsumer.h  FileManager.cpp  FileManager.h  FileManagerThread.cpp  FileManagerThread.h  UpdateInfo.cpp  UpdateInfo.h  WorkingDirectoryManager.cpp  WorkingDirectoryManager.h
TinTorrent/FileManager/ModelEntities/: FileInfo.cpp  FileInfo.h  FileSegmentsInfo.cpp  FileSegmentsInfo.h
TinTorrent/Kernel/: ClientThreadsCollection.cpp  ClientThreadsCollection.h  Kernel.cpp  Kernel.h  LocalResourcesStateInfo.cpp  LocalResourcesStateInfo.h  SegmentState.h  ServerThreadsCollection.cpp  ServerThreadsCollection.h  TinNetworkState.cpp  TinNetworkState.h  WorkingDirectoryState.cpp  WorkingDirectoryState.h
TinTorrent/Logging/: LogBase.cpp  LogBase.h  LoggingMain.cpp  LoggingMain.h
TinTorrent/ModelEntities/: Resource.cpp  Resource.h  TinAddress.cpp  TinAddress.h
TinTorrent/Multithreading/: ActionQueue.cpp  ActionQueue.h  ActionThread.cpp  ActionThread.h  BlockingElement.cpp  BlockingElement.h  MultithreadingSequence.cpp  MultithreadingSequence.h
TinTorrent/ProgramInfoProvider/: ProgramInfoProvider.cpp  ProgramInfoProvider.h
TinTorrent/ProgramInfoProvider/outStructures/: OutClientConnectionInfo.cpp  OutClientConnectionInfo.h  OutLocalResource.cpp  OutLocalResource.h  OutResourcesBeingDownloaded.cpp  OutResourcesBeingDownloaded.h  OutServerConnectionInfo.cpp  OutServerConnectionInfo.h  OutTinResourcesInOtherClients.cpp  OutTinResourcesInOtherClients.h
TinTorrent/Test/: FileTestingBase.cpp  FileTestingBase.h  ThreadInTest.cpp  ThreadInTest.h  testMain.cpp
TinTorrent/Test/FileManager/: FileManagerTest.cpp
TinTorrent/Test/Kernel/: KernelTest.cpp  KernelTest.h  WorkingDirectoryStateTest.cpp  WorkingDirectoryStateTest.h
TinTorrent/Test/MessagesTest/: MessageResourceRequestTest.cpp
TinTorrent/Test/Mocks/: MockFileInformationConsumer.h
TinTorrent/Test/ScenarioLoader/: ScenarioAction.cpp  ScenarioAction.h  ScenarioRunner.cpp  ScenarioRunner.h
TinTorrent/Test/TinProtocolLib/: TinBroadcastSocketTest.cpp  TinSocketTest.cpp  TinSocketTest.h
TinTorrent/TinProtocolLib/: MessageCloseException.cpp  MessageCloseException.h  OwnIpGetter.cpp  OwnIpGetter.h  Segment.cpp  Segment.h  SegmentInfo.cpp  SegmentInfo.h  SocketCommunicationException.cpp  SocketCommunicationException.h  SocketWrapper.cpp  SocketWrapper.h  TinBroadcastSocket.cpp  TinBroadcastSocket.h  TinClientSocket.cpp  TinClientSocket.h  TinConnectedClientSocket.cpp  TinConnectedClientSocket.h  TinConnectedServerSocket.cpp  TinConnectedServerSocket.h  TinConnectedSocket.cpp  TinConnectedSocket.h  TinListeningUdpSocket.cpp  TinListeningUdpSocket.h  TinProtocolCommunicationSocket.cpp  TinProtocolCommunicationSocket.h  TinServerSocket.cpp  TinServerSocket.h
TinTorrent/TinProtocolLib/Messages/: BroadcastMessage.cpp  BroadcastMessage.h  Message.cpp  Message.h  MessageClose.cpp  MessageClose.h  MessageEnum.cpp  MessageEnum.h  MessageResourceRequest.cpp  MessageResourceRequest.h  MessageResourceResponse.cpp  MessageResourceResponse.h  MessageStartSendingRequest.cpp  MessageStartSendingRequest.h  MessageType.cpp  MessageType.h  SegmentResponse.cpp  SegmentResponse.h
TinTorrent/TinProtocolLib/Threads/: ThreadTinBroadcast.cpp  ThreadTinBroadcast.h  ThreadTinUdpListeningSocket.cpp  ThreadTinUdpListeningSocket.h  TinClientThread.cpp  TinClientThread.h  TinConnectedServerThread.cpp  TinConnectedServerThread.h  TinServerSocketThread.cpp  TinServerSocketThread.h
TinTorrent/Utils/: BitUtils.cpp  BitUtils.h  ContainerUtils.cpp  ContainerUtils.h  FileUtils.cpp  FileUtils.h  MyString.cpp  MyString.h  SegmentUtils.cpp  SegmentUtils.h  StreamUtils.cpp  StreamUtils.h
TinTorrent/View/: LocalResourcesScreen.cpp  LocalResourcesScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  OtherClientsScreen.cpp  OtherClientsScreen.h  ResourcesToDownloadScreen.cpp  ResourcesToDownloadScreen.h  Screen.h  StatusScreen.cpp  StatusScreen.h  StoppedResourcesScreen.cpp  StoppedResourcesScreen.h  View.cpp  View.h
TinTorrent/docker/: c1_file  config.json  config_interactive.json  dockerWebTest.sh  dockerfile  runInteractiveTest.sh  runtest.sh  runtest2.sh  runtest3.sh  scenario.json
TinTorrent/docker/a2Scenario/: test2a2Scenario.json  test2a2config.json
TinTorrent/docker/a2TestDirectory/: getRevertedResources.txt
TinTorrent/docker/dockerWebTestWorkingDir/: someFIle
TinTorrent/docker/t1/: config.json  dockerfile  runtest.sh  scenario.json
TinTorrent/docker/t2/: config.json  runtest.sh  scenario.json
TinTorrent/docker/t2/logs/: a10_log  a1_log  a2_log  a3_log  a4_log  a5_log  a6_log  a7_log  a8_log  a9_log
TinTorrent/lib/spdlog/: common.h
